Update profile page

--- a/catalog/templates/attrs.html
+++ b/catalog/templates/attrs.html
@@ -5,28 +5,26 @@
 {% if paint_logout %}
 {% if attributes %}
 <div class="container">
-  <table class="table table-striped">
-      <thead>
-          <th>Name</th>
-          <th>Values</th>
-      </thead>
-      <tbody>
-        {% for key, value in attributes.items %}
-          <tr>
-            <td>{{ key }}</td>
-            <td>{{ value }}</td>
-          </tr>
-          {% endfor %}
-      </tbody>
-  </table>
+  <div class="card col-sm-6 mr-auto ml-auto mt-3 pt-1">
+    <img class="card-img-top" style="border-radius: 50%; width: 175px; height: 175px; margin: auto;" src="{{ attributes.profile_pic }}" alt="Card image cap">
+  <div class="card-body">
+    <h5 class="card-title text-center">{{ attributes.name }}</h5>
+  </div>
+  <ul class="list-group list-group-flush">
+    <li class="list-group-item"><strong>Email: </strong>{{ attributes.email }}</li>
+    <li class="list-group-item"><strong>Job Title: </strong> {{ attributes.job }}</li>
+  </ul>
+  <div class="card-body">
+    <a href="{% url "index" %}?slo" class="btn btn-danger float-right">Logout</a>
+  </div>
+</div>
 </div>
 {% else %}
 <div class="alert alert-danger" role="alert">You don't have any attributes</div>
-  {% endif %}
-  <a href="{% url "index" %}?slo" class="btn btn-danger">Logout</a>
-  {% else %}
+{% endif %}
+{% else %}
   <a href="{% url "index" %}?sso2" class="btn btn-primary">Login and access again to this page</a>
-  {% endif %}
+{% endif %}
 </div>
 
 {% endblock %}
