--- a/catalog/templates/index.html
+++ b/catalog/templates/index.html
@@ -4,7 +4,7 @@
 <div class="jumbotron jumbotron-fluid galaxy-banner">
   <div class="container text-center">
     <h1 class="text-white">Explore your data</h1>
-    <a href="{% url "index" %}?sso2" class="btn btn-lg btn-warning">Login</a>
+    <a href="{% url "login" %}" class="btn btn-lg btn-warning">Login</a>
   </div>
 </div>
 
