--- a/catalog/templates/_nav.html
+++ b/catalog/templates/_nav.html
@@ -9,20 +9,22 @@
       <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
       <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Search</button>
     </form>
-      {% if attributes %}
+      {% if user.is_authenticated %}
       <ul class="navbar-nav pl-auto">
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="profile" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            {{ attributes.name }} 
-            <img class="avatar" src="{{ attributes.profile_pic }}">
+            {{ user.first_name }} {{ user.last_name }}
+            <img class="avatar" src="{{ user.profile.avatar_url }}">
 
           </a>
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="profile">
-            <a class="dropdown-item"><strong>Email:</strong>{{ attributes.email }}</a>
+            <a class="dropdown-item"><strong>Email:</strong>{{ user.email }}</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item"><strong>Location:</strong> RSO</a>
-            <a class="dropdown-item"><strong>Role:</strong>{{ attributes.job }}</a>
+            <a class="dropdown-item"><strong>Role:</strong>{{ user.profile.job_title }}</a>
             <a class="dropdown-item"><strong>Department:</strong> Data &amp; Evaluation</a>
+            <a class="dropdown-item text-center text-primary" href="{% url "profile" %}">View Profile</a>
+            <a class="dropdown-item text-center text-danger" href="{% url "logout" %}">Log out</a>
           </div>
         </li>
       </ul>
