DATA-1094 Fix sticky footer styling

--- a/catalog/templates/_footer.html
+++ b/catalog/templates/_footer.html
@@ -1,10 +1,12 @@
 <div ulass="container">
   <div class="row">
-    <div class="col-sm-7">
-      <span class="text-muted">Made with <i class="fas fa-heart"></i> &amp; <i class="fas fa-coffee"></i> by <a href="#" class="text-light">Team Data</a></span>
+    <div class="col-sm-12 col-md-8 text-right text-md-left">
+      <span class="text-muted ">Made with <i class="fas fa-heart"></i> &amp; <i class="fas fa-coffee"></i> by <a href="#" class="text-light">Team Data</a></span>
     </div>
-    <div class="col-sm-5 text-right">
-      <span class="text-muted pr-3">&copy; KIPP Bay Area</span>
+    <div class="col-sm-12 col-md-2 text-right">
+      <span class="text-muted">&copy; KIPP Bay Area</span>
+    </div>
+    <div class="col-sm-12 col-md-2 text-right">
       <span class="text-muted"><a href="#" class="text-white">Terms</a> + <a href="#" class="text-white">Privacy</a></span>
     </div>
   </div>
