--- a/catalog/templates/base.html
+++ b/catalog/templates/base.html
@@ -1,6 +1,6 @@
 {% load static %}
 <!doctype html>
-<html lang="en">
+<html lang="en" class="h-100">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -18,18 +18,20 @@
     <link rel="stylesheet" type="text/css" href="{% static "css/style.css" %}" media="screen,projection"/>
   </head>
 
-  <body>
+  <body class="d-flex flex-column h-100">
     <header>
       {% include '_nav.html' %}
     </header>
 
-    <main role="main">
+    <main role="main" class="flex-shrink-0">
       {% block content %}
       {% endblock %}
     </main><!-- /.container -->
 
-    <footer class="footer">
-      {% include '_footer.html' %}
+    <footer class="footer mt-auto py-3">
+      <div class="container">
+        {% include '_footer.html' %}
+      </div>
     </footer> 
     <!-- Bootstrap core JavaScript
     ================================================== -->
