--- a/static/css/style.css
+++ b/static/css/style.css
@@ -5,13 +5,12 @@
 }
 
 .footer{
-  position: absolute;
-  bottom: 0;
-  padding: 0rem 1rem;
-  width: 100%;
-  height: 3.75rem;
-  line-height: 3.75rem;
   background-color: #0e1015;
+}
+
+.footer > .container {
+  padding-left: 15px;
+  padding-right: 15px;
 }
 
 .logo {
@@ -23,4 +22,13 @@
   width: 31px;
   height: 31px;
   border-radius: 50%;
+}
+
+.avatar_lg {
+  vertical-align: middle;
+  width: 175px;
+  height: 175px;
+  border-radius: 50%;
+  margin: auto;
+  display: block;
 }
