--- a/catalog/templates/report.html
+++ b/catalog/templates/report.html
@@ -1,29 +1,18 @@
 {% extends "base.html" %}
 {% block content %}
-<div class="container">
-  <div class="row pt-3 pb-1 ml-auto mr-auto">
-    <div class="col-sm-9">
-      <h2 class="text-muted">{{ report.name }}</h2>
+  <div class="container">
+    <div class="row pt-3 pb-1 ml-auto mr-auto">
+      <div class="col-sm-9">
+        <h2 class="text-muted">{{ report.name }}</h2>
+      </div>
     </div>
   </div>
-</div>
 
   <div class="container pb-3">
-    <div class='tableauPlaceholder mr-auto ml-auto' style='width: 1000px; height: 827px;'>
-      <object class='tableauViz' width='1000' height='827' style='display:none;'>
-        <param name='host_url' value='{{ report.host_url }}' />
-        <param name='site_root' value='{{ report.site_root }}' />
-        <param name='name' value='{{ report.embed_name }}' />
-        <param name='toolbar' value='top' />
-        <param name='embed_code_version' value='3' />
-        <param name='alerts' value='no' />
-        <param name='tabs' value='no' />
-        <param name='subscriptions' value='no' />
-        <param name='customViews' value='no' />
-      </object>
-    </div> 
+    {% include "_tableau_iframe.html" %}
   </div>
-  
-  <script type='text/javascript' src='https://stg-tableau.kipp.org/javascripts/api/viz_v1.js'></script>
+{% endblock %}
 
+{% block scripts %}
+  <script type='text/javascript' src='https://stg-tableau.kipp.org/javascripts/api/viz_v1.js'></script>
 {% endblock %}
