--- a/catalog/templates/_nav.html
+++ b/catalog/templates/_nav.html
@@ -5,28 +5,10 @@
   </button>
 
   <div class="collapse navbar-collapse justify-content-between" id="navbarSupportedContent">
-    <form class="form-inline">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Search</button>
-    </form>
-      {% if user.is_authenticated %}
-      <ul class="navbar-nav pl-auto">
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="profile" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            {{ user.first_name }} {{ user.last_name }}
-            <img class="avatar" src="{{ user.profile.avatar_url }}">
-
-          </a>
-          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="profile">
-            <a class="dropdown-item"><strong>Email:</strong>{{ user.email }}</a>
-            <a class="dropdown-item"><strong>Location:</strong> {{ user.profile.site }}</a>
-            <a class="dropdown-item"><strong>Role:</strong>{{ user.profile.job_title }}</a>
-            <div class="dropdown-divider"></div>
-            <a class="text-center btn btn-outline-primary mr-2 ml-3" href="{% url "profile" %}">View Profile</a>
-            <a class="float-right text-center btn btn-outline-danger mr-3 ml-3" href="{% url "logout" %}">Log out</a>
-          </div>
-        </li>
-      </ul>
-      {% endif %}
+    {% if user.is_authenticated %}
+      {% include "_nav_dropdown.html" %}
+      {% include "_nav_searchbar.html" %}
+      {% include "_nav_profile.html" %}
+    {% endif %}
   </div>
 </nav>
