DATA-1094 Add static error pages

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,7 @@
+.navbar-dark {
+  background-color: #255694 !important;
+}
+
 .galaxy-banner{
    background: url('/static/images/galaxy.png') no-repeat center;
    background-size: cover;
