DATA-1094 Add feedback from to sidepanel

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -109,3 +109,10 @@
   .sidenav a {font-size: 18px;}
 }
 
+.feedback-btn {
+  cursor: pointer;
+}
+
+#comments, label[for="comments"] {
+  display: none;
+}
