--- a/catalog/templates/_sidepanel.html
+++ b/catalog/templates/_sidepanel.html
@@ -6,12 +6,16 @@
         <h4 class="pl-3 text-info">{{ report.name }}</h4>
       </div>
     </div>
-    
+    <div class="alert alert-dismissible fade show" hidden role="alert">
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div> 
     <div class="row">
       <div class="col-sm-12 mt-3">
         <span class="pl-3 badge badge-light">{{ report.category }}</span>
         <i class="pl-3 far fa-heart fa-lg text-danger"></i>
-        <i class="pl-3 far fa-comment fa-lg text-primary"></i>
+        {% include "_feedback_button.html" %}
       </div>
     </div>
     
