--- a/catalog/templates/report.html
+++ b/catalog/templates/report.html
@@ -34,4 +34,57 @@
       document.getElementById("side-panel").style.width = "0";
     }
   </script>
+  <script>
+      $('.feedback-btn').click(function(){
+        $('.feedback-btn').removeClass('text-success text-danger text-warning');
+        commentLabel = $('label[for="comments"]');
+        commentLabel.show();
+        $('#comments').show();
+        score = $(this).find('[name="score"]').val();
+        if(score > 3){
+          commentLabel.text("What do you like about this report?");
+          $(this).toggleClass('text-success');
+        } else if(score < 3){
+          commentLabel.text("How could this report be better?");
+          $(this).toggleClass('text-danger');
+        } else {
+          commentLabel.text("Optional comments:");
+          $(this).toggleClass('text-warning');
+        }
+        
+      });
+
+
+      $('#feedbackform').submit(function(event){
+        event.preventDefault();
+        $.ajax({
+          data: $(this).serialize(),
+          type: $(this).attr('method'),
+          url: $(this).attr('action'),
+          success: function(response){
+            if(response['success']){
+              $('#feedbackform')[0].reset();
+              $('.feedback-btn').removeClass('text-success text-danger text-warning');
+              $('.alert').prepend("<strong>Success</strong> Thanks for giving your feedback!");
+              $('.alert').toggleClass('alert-info');
+              $('.alert').removeAttr('hidden');
+              $('.collapse').collapse('hide');
+              $('.fa-comment').removeClass('far').addClass('fas');
+              $('.score-badge').text(response['score']);
+              $('.score-badge').removeAttr('hidden');
+            }
+            if(response['error']){
+              $('.alert').prepend("<strong>Error</strong> Something went wrong.");
+              $('.alert').toggleClass('alert-danger');
+              $('.alert').removeAttr('hidden');
+            }
+          },
+          error: function(request, status, error){
+              $('.alert').prepend("<strong>Error</strong> "+error);
+              $('.alert').toggleClass('alert-danger');
+              $('.alert').removeAttr('hidden');
+          }
+        });
+      });
+  </script>
 {% endblock %}
