--- a/catalog/templates/_sidepanel.html
+++ b/catalog/templates/_sidepanel.html
@@ -1,3 +1,4 @@
+{% load feedback_helpers %}
 <div id="side-panel" class="sidenav border border-left">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
   <div class="container">
@@ -43,9 +44,11 @@
       <div class="col-sm-12 text-info">
         <i class="far fa-user"></i> recently viewed by <span class="badge badge-pill badge-info">10</span> 
       </div>
+      {% if avg_feedback %}
       <div class="col-sm-12 text-info">
-        <i class="fas fa-chart-pie"></i> average feedback score <span class="badge badge-pill badge-info">4.2 <i class="far fa-smile"></i></span> 
+        <i class="fas {{ avg_feedback|sentiment_icon}} {{ avg_feedback|sentiment_color}}"></i> average feedback score <span class="avg-feedback badge badge-pill badge-info">{{ avg_feedback }}</span> 
       </div>
+      {% endif %}
     </div>
 
     <hr class="col-sm-10">
