DATA-1094 Add favorite route, view, and ajax script

--- a/catalog/templates/report.html
+++ b/catalog/templates/report.html
@@ -35,6 +35,27 @@
     }
   </script>
   <script>
+    $('.fav-btn').click(function(event){
+      event.preventDefault();
+      form = $('#favoriteform')
+      $.ajax({
+        data: form.serialize(),
+        type: form.attr('method'),
+        url: form.attr('action'),
+        success: function(response){
+          if(response['success']){
+            $('.fav-btn').toggleClass('far').toggleClass('fas');
+          }
+        },
+        error: function(request, status, error){
+          $('.alert').prepend("<strong>Error</strong> "+error);
+          $('.alert').toggleClass('alert-danger');
+          $('.alert').removeAttr('hidden');
+        }
+      });
+    });
+  </script>
+  <script>
       $('.feedback-btn').click(function(){
         $('.sentiment-icon').removeClass('fas').addClass('far');
         commentLabel = $('label[for="comments"]');
