--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,11 @@
+.fav-icon {
+  display: inline;
+}
+
+#favoriteform {
+  display: inline;
+}
+
 .navbar-dark {
   background-color: #255694 !important;
 }
