--- a/catalog/templates/_favorite_button.html
+++ b/catalog/templates/_favorite_button.html
@@ -1,7 +1,7 @@
 <div class="fav-icon">
   <form id="favoriteform" method="POST" action="{% url 'favorite_form' report.id %}">
     {% csrf_token %}
-    {% if favorite %}
+    {% if is_favorite %}
       <i class="fav-btn pl-3 fas fa-heart fa-lg text-danger"></i>
     {% else %}
       <i class="fav-btn pl-3 far fa-heart fa-lg text-danger"></i>
