--- a/catalog/templates/_nav_searchbar.html
+++ b/catalog/templates/_nav_searchbar.html
@@ -1,5 +1,6 @@
-<form class="form-inline">
-  <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+<form class="form-inline" id="search-bar" method="POST" action="{% url 'search' %}">
+  {% csrf_token %}
+  <input class="form-control mr-sm-2" type="search" id="search-term" name="search-term" placeholder="Search" aria-label="Search">
   <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Search</button>
 </form>
 
