--- a/catalog/templates/_sidepanel.html
+++ b/catalog/templates/_sidepanel.html
@@ -49,7 +49,7 @@
         <i class="fas fa-chart-pie"></i> average feedback score <span class="avg-feedback badge badge-pill badge-info">{{ avg_feedback }}</span> 
       </div>
       <div class="col-sm-12 text-info">
-        <i class="fas {{ feedback.score|sentiment_icon}}"></i> your feedback score <span class="avg-feedback badge badge-pill badge-info">{{ feedback.score }}</span> 
+        <i class="fas {{ feedback.score|sentiment_icon}}"></i> your feedback score <span class="score-badge badge badge-pill badge-info">{{ feedback.score }}</span> 
       </div>
       {% endif %}
     </div>
