--- a/catalog/templates/_nav.html
+++ b/catalog/templates/_nav.html
@@ -1,5 +1,11 @@
 <nav class="navbar navbar-expand-lg navbar-dark">
-  <a class="navbar-brand" href="/"><strong>KIPP:</strong> Galaxy</a>
+  {% if user.is_authenticated %}
+    <a class="navbar-brand" href="{% url "profile" %}">
+  {% else %}
+    <a class="navbar-brand" href="/">
+  {% endif %}
+      <strong>KIPP:</strong> Galaxy
+    </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
