--- a/catalog/templates/_feedback_button.html
+++ b/catalog/templates/_feedback_button.html
@@ -1,9 +1,4 @@
-{% if feedback %}
-  <i class="pl-3 fas fa-comment fa-lg text-primary" data-toggle="collapse" data-target="#feedback-form" aria-expanded="false" aria-controls="feedback-form"></i>
-{% else  %}
-  <i class="pl-3 far fa-comment fa-lg text-primary" data-toggle="collapse" data-target="#feedback-form" aria-expanded="false" aria-controls="feedback-form"></i>
-  <span hidden class="score-badge badge badge-pill badge-primary"></span>
-{% endif %}
+<i class="feedback-btn pl-3 {{ feedback|yesno:"fas,far" }} fa-comment fa-lg text-primary" data-toggle="collapse" data-target="#feedback-form" aria-expanded="false" aria-controls="feedback-form"></i>
 <div class="collapse" id="feedback-form">
   <div class="card">
   <div class="card-header">
