--- a/catalog/templates/report.html
+++ b/catalog/templates/report.html
@@ -26,5 +26,5 @@
   <script type='text/javascript' src='https://stg-tableau.kipp.org/javascripts/api/viz_v1.js'></script>
   <script src="{% static "js/sidepanel.js" %}"></script>
   <script src="{% static "js/favorite.js" %}"></script>
-  <script scr="{% static "js/feedback.js" %}"></script>
+  <script src="{% static "js/feedback.js" %}"></script>
 {% endblock %}
