--- a/catalog/templates/_sidepanel.html
+++ b/catalog/templates/_sidepanel.html
@@ -39,27 +39,9 @@
 
     <hr class="col-sm-10">
     <!--Report visibility-->
-    <div class="col-sm-12 pl-3">
-        <a class="btn-collapse text-info" data-toggle="collapse" href="#visible-to" aria-expanded="false" aria-controls="visible-to">
-          <i class="fas fa-user-tag"></i> visible to roles 
-        </a>
-        <div class="collapse pl-3" id="visible-to">
-          {% for role in report.roles.all %}
-            <span class="badge badge-light">{{ role }}</span>
-          {% endfor %}
-        </div>
-    </div>
+    {% include "_report_role_stats.html" with collapse_id="visible-to" icon_type="fas fa-user-tag" collapse_title="visible to roles" roles=report.roles.all %}
     <!--Report popularity -->
-    <div class="col-sm-12 pl-3">
-        <a class="btn-collapse text-info" data-toggle="collapse" href="#popular-with" aria-expanded="false" aria-controls="popular-with">
-          <i class="fas fa-fire"></i> popular with roles
-        </a>
-        <div class="collapse pl-3" id="popular-with">
-          {% for role in report.roles.all|slice:"0:4" %}
-            <span class="badge badge-light">{{ role }}</span>
-          {% endfor %}
-        </div>
-    </div>
+    {% include "_report_role_stats.html" with collapse_id="popular-with" icon_type="fas fa-fire" collapse_title="popular with roles" roles=report.roles.all|slice:"0:4" %}
 
   </div>
 </div> 
