--- a/catalog/templates/high_health.html
+++ b/catalog/templates/high_health.html
@@ -5,9 +5,18 @@
 
 {% block content %}
   <div class="container pt-3">
-    <h1>High Health</h1>
+    <div class="row">
+      <div class="col-sm">
+        <h1>High Health</h1>
+      </div>
+      {% with float="float-right" title="School Type" items=school_levels %}
+        {% include "_hh_dropdown.html" %}
+      {% endwith %}
+    </div>
+  </div>
 
-    <table class="table table-hover">
+  <div class="container">
+    <table class="table table-hover mt-3">
       <thead>
         <tr class="small text-center">
           <th>EQ</th>
@@ -21,14 +30,14 @@
       <tbody>
         {% for metric in metrics %}
           <tr>
-            <td class="text-center eq" data-toggle="popover" title="{{ metric.metric.essential_question }}" data-content="{{ metric.metric.essential_question.description }}">
+            <td class="text-center eq" data-toggle="popover" data-trigger="hover" title="{{ metric.metric.essential_question }}" data-content="{{ metric.metric.essential_question.description }}">
               {{ metric.metric.essential_question }}
             </td>
             <td>
               <a href="{% if metric.metric.report %}{% url "report" metric.metric.report.id %}{% endif %}">
                 {{ metric.metric }}
               </a>
-              <i class="fas fa-info-circle text-primary pl-2 metric-def" data-toggle="popover" title="{{ metric.metric }}" data-content="{{ metric.metric.definition }}"></i>
+              <i class="fas fa-info-circle text-primary pl-2 metric-def" data-toggle="popover" data-trigger="hover" title="{{ metric.metric }}" data-content="{{ metric.metric.definition }}"></i>
             </td>
             <td class="text-center">
               <span class="small text-muted">
