--- a/static/css/style.css
+++ b/static/css/style.css
@@ -15,7 +15,7 @@
 }
 
 .galaxy-banner{
-   background: url('/static/images/galaxy.png') no-repeat center;
+   background: url('/staticfiles/images/galaxy.png') no-repeat center;
    background-size: cover;
    padding-bottom: 10%;
 }
