--- a/catalog/templates/profile.html
+++ b/catalog/templates/profile.html
@@ -70,6 +70,26 @@
           </ul>
         </div>
         <div class="tab-pane fade" id="recent" role="tabpanel" aria-labelledby="recent-tab">
+          <ul class="list-group">
+            <table class="table table-hover">
+              <thead>
+                <tr>
+                  <th scope="col">Page</th>
+                  <th scope="col">Timestamp</th>
+                  <th scope="col"># Views</th>
+                </tr>
+              </thead>
+              <tbody>
+                {% for rc in recently_viewed %}
+                <tr>
+                  <td><a href="{{ rc.page }}">{{ rc.page }}</a></td>
+                  <td>{{ rc.timestamp }}</td>
+                  <td>{{ rc.views }}</td>
+                </tr>
+                {% endfor %}
+              </tbody>
+            </table>
+          </ul>
         </div>
       </div>
     </div>
