DATA-995 Add modal for longitudinal data

--- a/catalog/templates/_chart_modal.html
+++ b/catalog/templates/_chart_modal.html
@@ -9,7 +9,7 @@
                 </button>
             </div>
             <div class="modal-body">
-                <canvas id="myChart" width="400" height="400"></canvas>
+                <canvas id="{{ chart_id }}" width="400" height="400"></canvas>
             </div>
             <div class="modal-footer">
                 <span class="text-muted small">Last updated: {{ last_updated }}</span>
