--- a/catalog/templates/base.html
+++ b/catalog/templates/base.html
@@ -1,46 +1,55 @@
 {% load static %}
 <!doctype html>
 <html lang="en" class="h-100">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>KIPP Galaxy</title>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap core CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <!-- Custom styles for this template -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-    <link rel="icon" href="{% static "images/favicon-32x32.png" %}" sizes="32x32">
-    <link rel="icon" href="{% static "images/favicon-192x192.png" %}" sizes="192x192">
-    <link rel="apple-touch-icon-precomposed" href="{% static "images/favicon-180x180.png" %}">
-    <meta name="msapplication-TileImage" content="{% static "images/favicon-270x270.png" %}">
-    <link rel="stylesheet" type="text/css" href="{% static "css/style.css" %}" media="screen,projection"/>
-  </head>
+  <title>KIPP Galaxy</title>
 
-  <body class="d-flex flex-column h-100">
-    <header>
-      {% include '_nav.html' %}
-    </header>
+  <!-- Bootstrap core CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <!-- Custom styles for this template -->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
+    integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+  <link rel="icon" href="{% static "images/favicon-32x32.png" %}" sizes="32x32">
+  <link rel="icon" href="{% static "images/favicon-192x192.png" %}" sizes="192x192">
+  <link rel="apple-touch-icon-precomposed" href="{% static "images/favicon-180x180.png" %}">
+  <meta name="msapplication-TileImage" content="{% static "images/favicon-270x270.png" %}">
+  <link rel="stylesheet" type="text/css" href="{% static "css/style.css" %}" media="screen,projection" />
+</head>
 
-    <main role="main" class="flex-shrink-0">
-      {% block content %}
-      {% endblock %}
-    </main><!-- /.container -->
+<body class="d-flex flex-column h-100">
+  <header>
+    {% include '_nav.html' %}
+  </header>
 
-    <footer class="footer mt-auto py-3">
-      <div class="container">
-        {% include '_footer.html' %}
-      </div>
-    </footer> 
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <script src="{% static "js/pageview.js" %}"></script>
-    {% block scripts %}
+  <main role="main" class="flex-shrink-0">
+    {% block content %}
     {% endblock %}
-  </body>
+  </main><!-- /.container -->
+
+  <footer class="footer mt-auto py-3">
+    <div class="container">
+      {% include '_footer.html' %}
+    </div>
+  </footer>
+  <!-- Bootstrap core JavaScript
+    ================================================== -->
+  <!-- Placed at the end of the document so the pages load faster -->
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+    integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+    integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+    crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+    crossorigin="anonymous"></script>
+  <script src="{% static "js/pageview.js" %}"></script>
+  {% block scripts %}
+  {% endblock %}
+</body>
+
 </html>
