DATA-995 Add school_level display name to refactor

--- a/catalog/templates/high_health.html
+++ b/catalog/templates/high_health.html
@@ -9,9 +9,7 @@
     <div class="col-sm">
       <h1>High Health</h1>
     </div>
-    {% with float="float-right" title="School Type" items=school_levels %}
-    {% include "_hh_dropdown.html" %}
-    {% endwith %}
+    {% include "_hh_dropdown_school_types.html" %}
   </div>
 </div>
 
