Add school level to title

--- a/catalog/templates/high_health.html
+++ b/catalog/templates/high_health.html
@@ -7,7 +7,7 @@
 <div class="container pt-3">
   <div class="row">
     <div class="col-sm">
-      <h1>High Health</h1>
+      <h1>High Health ({{ school_level.display_name }})</h1>
     </div>
     {% include "_hh_dropdown_school_types.html" %}
   </div>
