DATA-987 Add overall level view

--- a/catalog/templates/_hh_dropdown_school_types.html
+++ b/catalog/templates/_hh_dropdown_school_types.html
@@ -9,5 +9,6 @@
       {{ school_level.display_name }}
     </a>
     {% endfor %}
+    <a class="dropdown-item" href="{% url "high_health_overall" %}">Overall</a>
   </div>
 </div>
