DATA-987 Add goal formatting for overall

--- a/templates/high_health.html
+++ b/templates/high_health.html
@@ -48,7 +48,7 @@
         {% for measure in metric.measures %}
         {% if measure is None %}
         <td class="text-center">
-          <span class="text-{{ measure|goal_format }}">
+          <span class="text-muted">
             NA
           </span>
         </td>
