DATA-987 Add color legend

--- a/templates/high_health.html
+++ b/templates/high_health.html
@@ -11,6 +11,9 @@
     </div>
     {% include "_hh_dropdown_school_types.html" %}
   </div>
+  <div class="row mt-3">
+    {% include "_hh_legend.html" %}
+  </div>
 </div>
 
 <div class="container">
