--- a/templates/high_health_overall.html
+++ b/templates/high_health_overall.html
@@ -58,14 +58,14 @@
                 </td>
                 {% else %}
                 <td class="text-center">
-                    {% with "modal_"|addstr:metric.metric.id|addstr:"_"|addstr:measure.school_level as modal_id %}
-                    {% with "chart_"|addstr:metric.metric.id|addstr:"_"|addstr:measure.school_level as chart_id %}
+                    {% with "modal_"|addstr:metric.metric.id|addstr:"_"|addstr:measure.school_level.id as modal_id %}
+                    {% with "chart_"|addstr:metric.metric.id|addstr:"_"|addstr:measure.school_level.id as chart_id %}
                     <span data-toggle="modal" data-target="#{{ modal_id}}"
                         class="hh_value text-{{ measure|agg_goal_format }}" data-metric-id="{{ metric.metric.id }}"
-                        data-school-id="{{ measure.school_level }}">
+                        data-school-id="{{ measure.school_level.id }}">
                         {{ measure.value|stringformat:'d' }}%
                     </span>
-                    {% include "_chart_modal.html" with title=metric.metric  modal_id=modal_id chart_id=chart_id last_updated=metric.last_updated %}
+                    {% include "_chart_modal.html" with title=measure.school_level  modal_id=modal_id chart_id=chart_id last_updated=metric.last_updated %}
 
                     {% endwith %}
                     {% endwith %}
