--- a/templates/report.html
+++ b/templates/report.html
@@ -23,7 +23,7 @@
 {% endblock %}
 
 {% block scripts %}
-  <script type='text/javascript' src='https://stg-tableau.kipp.org/javascripts/api/viz_v1.js'></script>
+  <script type='text/javascript' src='https://tableau.kipp.org/javascripts/api/viz_v1.js'></script>
   <script src="{% static "js/sidepanel.js" %}"></script>
   <script src="{% static "js/favorite.js" %}"></script>
   <script src="{% static "js/feedback.js" %}"></script>
