--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 <div class="jumbotron jumbotron-fluid galaxy-banner">
   <div class="container text-center">
     <h1 class="text-white">Explore your data</h1>
-    <a href="{% url "login" %}" class="btn btn-lg btn-warning">Login</a>
+    <a href="{% url "login" %}" class="btn btn-lg btn-warning">Launch</a>
   </div>
 </div>
 
@@ -27,6 +27,6 @@
       <h5 class="text-secondary">Team & Family <br>on a Mission</h5>
     </div>
   </div>
-  <img class="logo mx-auto d-block"  src="{% static "images/kipp_logo_primary.png" %}">
+  <img class="logo mx-auto d-block" src="{% static "images/kipp_logo_primary.png" %}">
 </div>
 {% endblock %}
