--- a/templates/_footer.html
+++ b/templates/_footer.html
@@ -1,13 +1,16 @@
 <div ulass="container">
   <div class="row">
     <div class="col-sm-12 col-md-8 text-right text-md-left">
-      <span class="text-muted ">Made with <i class="fas fa-heart"></i> &amp; <i class="fas fa-coffee"></i> by <a href="#" class="text-light">Team Data</a></span>
+      <span class="text-muted ">Made with <i class="fas fa-heart"></i> &amp; <i class="fas fa-coffee"></i> by <a
+          href="https://sites.google.com/kippbayarea.org/launchpad/our-rso-team/data-evaluation-team"
+          class="text-light">Team Data</a></span>
     </div>
     <div class="col-sm-12 col-md-2 text-right">
       <span class="text-muted">&copy; KIPP Bay Area</span>
     </div>
     <div class="col-sm-12 col-md-2 text-right">
-      <span class="text-muted"><a href="#" class="text-white">Terms</a> + <a href="#" class="text-white">Privacy</a></span>
+      <span class="text-muted"><a href="#" class="text-white">Terms</a> + <a href="#"
+          class="text-white">Privacy</a></span>
     </div>
   </div>
 </div>
